Mise à jour du formulaire de recherche

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -13,6 +13,8 @@
 	<script defer src='/bundle.js'></script>
 </head>
 
-<body>
+<body style="padding: 0; margin: 0">
+	
+<script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.1.7/js/uikit.min.js"></script>
 </body>
 </html>
